lib/parse.output
   0  $accept : %entry% $end

   1  comp_unit : func_def_list EOF

   2  func_def_list : func_def
   3                | func_def_list func_def

   4  func_type : INT
   5            | VOID

   6  func_def : func_type ID LPAREN param_list_optional RPAREN block

   7  param_list_optional :
   8                      | param_list_nonempty

   9  param_list_nonempty : param
  10                      | param_list_nonempty COMMA param

  11  param : INT ID

  12  block : LBRACE stmt_list RBRACE

  13  stmt_list :
  14            | stmt_list stmt

  15  stmt : SEMI
  16       | expr SEMI
  17       | INT ID ASSIGN expr SEMI
  18       | ID ASSIGN expr SEMI
  19       | IF LPAREN expr RPAREN stmt ELSE stmt
  20       | IF LPAREN expr RPAREN stmt
  21       | WHILE LPAREN expr RPAREN stmt
  22       | BREAK SEMI
  23       | CONTINUE SEMI
  24       | RETURN SEMI
  25       | RETURN expr SEMI
  26       | block

  27  expr : NUMBER
  28       | ID
  29       | LPAREN expr RPAREN
  30       | ID LPAREN arg_list_optional RPAREN
  31       | MINUS expr
  32       | NOT expr
  33       | expr OR expr
  34       | expr AND expr
  35       | expr EQ expr
  36       | expr NEQ expr
  37       | expr LT expr
  38       | expr LTE expr
  39       | expr GT expr
  40       | expr GTE expr
  41       | expr PLUS expr
  42       | expr MINUS expr
  43       | expr TIMES expr
  44       | expr DIV expr
  45       | expr MOD expr

  46  arg_list_optional :
  47                    | arg_list_nonempty

  48  arg_list_nonempty : expr
  49                    | arg_list_nonempty COMMA expr

  50  %entry% : '\001' comp_unit

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . comp_unit  (50)

	INT  shift 3
	VOID  shift 4
	.  error

	comp_unit  goto 5
	func_def_list  goto 6
	func_def  goto 7
	func_type  goto 8


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	func_type : INT .  (4)

	.  reduce 4


state 4
	func_type : VOID .  (5)

	.  reduce 5


state 5
	%entry% : '\001' comp_unit .  (50)

	.  reduce 50


state 6
	comp_unit : func_def_list . EOF  (1)
	func_def_list : func_def_list . func_def  (3)

	INT  shift 3
	VOID  shift 4
	EOF  shift 9
	.  error

	func_def  goto 10
	func_type  goto 8


state 7
	func_def_list : func_def .  (2)

	.  reduce 2


state 8
	func_def : func_type . ID LPAREN param_list_optional RPAREN block  (6)

	ID  shift 11
	.  error


state 9
	comp_unit : func_def_list EOF .  (1)

	.  reduce 1


state 10
	func_def_list : func_def_list func_def .  (3)

	.  reduce 3


state 11
	func_def : func_type ID . LPAREN param_list_optional RPAREN block  (6)

	LPAREN  shift 12
	.  error


state 12
	func_def : func_type ID LPAREN . param_list_optional RPAREN block  (6)
	param_list_optional : .  (7)

	INT  shift 13
	RPAREN  reduce 7

	param_list_optional  goto 14
	param_list_nonempty  goto 15
	param  goto 16


state 13
	param : INT . ID  (11)

	ID  shift 17
	.  error


state 14
	func_def : func_type ID LPAREN param_list_optional . RPAREN block  (6)

	RPAREN  shift 18
	.  error


state 15
	param_list_optional : param_list_nonempty .  (8)
	param_list_nonempty : param_list_nonempty . COMMA param  (10)

	COMMA  shift 19
	RPAREN  reduce 8


state 16
	param_list_nonempty : param .  (9)

	.  reduce 9


state 17
	param : INT ID .  (11)

	.  reduce 11


state 18
	func_def : func_type ID LPAREN param_list_optional RPAREN . block  (6)

	LBRACE  shift 20
	.  error

	block  goto 21


state 19
	param_list_nonempty : param_list_nonempty COMMA . param  (10)

	INT  shift 13
	.  error

	param  goto 22


state 20
	block : LBRACE . stmt_list RBRACE  (12)
	stmt_list : .  (13)

	.  reduce 13

	stmt_list  goto 23


state 21
	func_def : func_type ID LPAREN param_list_optional RPAREN block .  (6)

	.  reduce 6


state 22
	param_list_nonempty : param_list_nonempty COMMA param .  (10)

	.  reduce 10


state 23
	block : LBRACE stmt_list . RBRACE  (12)
	stmt_list : stmt_list . stmt  (14)

	NUMBER  shift 24
	ID  shift 25
	INT  shift 26
	IF  shift 27
	WHILE  shift 28
	BREAK  shift 29
	CONTINUE  shift 30
	RETURN  shift 31
	LPAREN  shift 32
	LBRACE  shift 20
	RBRACE  shift 33
	SEMI  shift 34
	MINUS  shift 35
	NOT  shift 36
	.  error

	stmt  goto 37
	block  goto 38
	expr  goto 39


state 24
	expr : NUMBER .  (27)

	.  reduce 27


state 25
	stmt : ID . ASSIGN expr SEMI  (18)
	expr : ID .  (28)
	expr : ID . LPAREN arg_list_optional RPAREN  (30)

	LPAREN  shift 40
	ASSIGN  shift 41
	SEMI  reduce 28
	OR  reduce 28
	AND  reduce 28
	EQ  reduce 28
	NEQ  reduce 28
	LT  reduce 28
	LTE  reduce 28
	GT  reduce 28
	GTE  reduce 28
	PLUS  reduce 28
	MINUS  reduce 28
	TIMES  reduce 28
	DIV  reduce 28
	MOD  reduce 28


state 26
	stmt : INT . ID ASSIGN expr SEMI  (17)

	ID  shift 42
	.  error


state 27
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (19)
	stmt : IF . LPAREN expr RPAREN stmt  (20)

	LPAREN  shift 43
	.  error


state 28
	stmt : WHILE . LPAREN expr RPAREN stmt  (21)

	LPAREN  shift 44
	.  error


state 29
	stmt : BREAK . SEMI  (22)

	SEMI  shift 45
	.  error


state 30
	stmt : CONTINUE . SEMI  (23)

	SEMI  shift 46
	.  error


state 31
	stmt : RETURN . SEMI  (24)
	stmt : RETURN . expr SEMI  (25)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	SEMI  shift 48
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 49


state 32
	expr : LPAREN . expr RPAREN  (29)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 50


state 33
	block : LBRACE stmt_list RBRACE .  (12)

	.  reduce 12


state 34
	stmt : SEMI .  (15)

	.  reduce 15


state 35
	expr : MINUS . expr  (31)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 51


state 36
	expr : NOT . expr  (32)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 52


state 37
	stmt_list : stmt_list stmt .  (14)

	.  reduce 14


state 38
	stmt : block .  (26)

	.  reduce 26


state 39
	stmt : expr . SEMI  (16)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	SEMI  shift 53
	OR  shift 54
	AND  shift 55
	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	.  error


state 40
	expr : ID LPAREN . arg_list_optional RPAREN  (30)
	arg_list_optional : .  (46)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	RPAREN  reduce 46

	expr  goto 67
	arg_list_optional  goto 68
	arg_list_nonempty  goto 69


state 41
	stmt : ID ASSIGN . expr SEMI  (18)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 70


state 42
	stmt : INT ID . ASSIGN expr SEMI  (17)

	ASSIGN  shift 71
	.  error


state 43
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (19)
	stmt : IF LPAREN . expr RPAREN stmt  (20)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 72


state 44
	stmt : WHILE LPAREN . expr RPAREN stmt  (21)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 73


state 45
	stmt : BREAK SEMI .  (22)

	.  reduce 22


state 46
	stmt : CONTINUE SEMI .  (23)

	.  reduce 23


state 47
	expr : ID .  (28)
	expr : ID . LPAREN arg_list_optional RPAREN  (30)

	LPAREN  shift 40
	RPAREN  reduce 28
	SEMI  reduce 28
	COMMA  reduce 28
	OR  reduce 28
	AND  reduce 28
	EQ  reduce 28
	NEQ  reduce 28
	LT  reduce 28
	LTE  reduce 28
	GT  reduce 28
	GTE  reduce 28
	PLUS  reduce 28
	MINUS  reduce 28
	TIMES  reduce 28
	DIV  reduce 28
	MOD  reduce 28


state 48
	stmt : RETURN SEMI .  (24)

	.  reduce 24


state 49
	stmt : RETURN expr . SEMI  (25)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	SEMI  shift 74
	OR  shift 54
	AND  shift 55
	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	.  error


state 50
	expr : LPAREN expr . RPAREN  (29)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	RPAREN  shift 75
	OR  shift 54
	AND  shift 55
	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	.  error


state 51
	expr : MINUS expr .  (31)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	.  reduce 31


state 52
	expr : NOT expr .  (32)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	.  reduce 32


state 53
	stmt : expr SEMI .  (16)

	.  reduce 16


state 54
	expr : expr OR . expr  (33)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 76


state 55
	expr : expr AND . expr  (34)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 77


state 56
	expr : expr EQ . expr  (35)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 78


state 57
	expr : expr NEQ . expr  (36)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 79


state 58
	expr : expr LT . expr  (37)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 80


state 59
	expr : expr LTE . expr  (38)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 81


state 60
	expr : expr GT . expr  (39)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 82


state 61
	expr : expr GTE . expr  (40)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 83


state 62
	expr : expr PLUS . expr  (41)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 84


state 63
	expr : expr MINUS . expr  (42)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 85


state 64
	expr : expr TIMES . expr  (43)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 86


state 65
	expr : expr DIV . expr  (44)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 87


state 66
	expr : expr MOD . expr  (45)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 88


state 67
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)
	arg_list_nonempty : expr .  (48)

	OR  shift 54
	AND  shift 55
	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 48
	COMMA  reduce 48


state 68
	expr : ID LPAREN arg_list_optional . RPAREN  (30)

	RPAREN  shift 89
	.  error


state 69
	arg_list_optional : arg_list_nonempty .  (47)
	arg_list_nonempty : arg_list_nonempty . COMMA expr  (49)

	COMMA  shift 90
	RPAREN  reduce 47


state 70
	stmt : ID ASSIGN expr . SEMI  (18)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	SEMI  shift 91
	OR  shift 54
	AND  shift 55
	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	.  error


state 71
	stmt : INT ID ASSIGN . expr SEMI  (17)

	NUMBER  shift 24
	ID  shift 47
	LPAREN  shift 32
	MINUS  shift 35
	NOT  shift 36
	.  error

	expr  goto 92


state 72
	stmt : IF LPAREN expr . RPAREN stmt ELSE stmt  (19)
	stmt : IF LPAREN expr . RPAREN stmt  (20)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	RPAREN  shift 93
	OR  shift 54
	AND  shift 55
	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	.  error


state 73
	stmt : WHILE LPAREN expr . RPAREN stmt  (21)
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	RPAREN  shift 94
	OR  shift 54
	AND  shift 55
	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	.  error


state 74
	stmt : RETURN expr SEMI .  (25)

	.  reduce 25


state 75
	expr : LPAREN expr RPAREN .  (29)

	.  reduce 29


state 76
	expr : expr . OR expr  (33)
	expr : expr OR expr .  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	AND  shift 55
	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 33
	SEMI  reduce 33
	COMMA  reduce 33
	OR  reduce 33


state 77
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr AND expr .  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	EQ  shift 56
	NEQ  shift 57
	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 34
	SEMI  reduce 34
	COMMA  reduce 34
	OR  reduce 34
	AND  reduce 34


state 78
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr EQ expr .  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 35
	SEMI  reduce 35
	COMMA  reduce 35
	OR  reduce 35
	AND  reduce 35


state 79
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr NEQ expr .  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	LT  shift 58
	LTE  shift 59
	GT  shift 60
	GTE  shift 61
	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 36
	SEMI  reduce 36
	COMMA  reduce 36
	OR  reduce 36
	AND  reduce 36


state 80
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr LT expr .  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 37
	SEMI  reduce 37
	COMMA  reduce 37
	OR  reduce 37
	AND  reduce 37
	EQ  reduce 37
	NEQ  reduce 37


state 81
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr LTE expr .  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 38
	SEMI  reduce 38
	COMMA  reduce 38
	OR  reduce 38
	AND  reduce 38
	EQ  reduce 38
	NEQ  reduce 38


state 82
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr GT expr .  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 39
	SEMI  reduce 39
	COMMA  reduce 39
	OR  reduce 39
	AND  reduce 39
	EQ  reduce 39
	NEQ  reduce 39


state 83
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr GTE expr .  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	PLUS  shift 62
	MINUS  shift 63
	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 40
	SEMI  reduce 40
	COMMA  reduce 40
	OR  reduce 40
	AND  reduce 40
	EQ  reduce 40
	NEQ  reduce 40


state 84
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr PLUS expr .  (41)
	expr : expr . MINUS expr  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)

	TIMES  shift 64
	DIV  shift 65
	MOD  shift 66
	RPAREN  reduce 41
	SEMI  reduce 41
	COMMA  reduce 41
	OR  reduce 41
	AND  reduce 41
	EQ  reduce 41
	NEQ  reduce 41
	LT  reduce 41
	LTE  reduce 41
	GT  reduce 41
	GTE  reduce 41
	PLUS  reduce 41
	MINUS  reduce 41


state 85
	expr : expr . OR expr  (33)
	expr : expr . AND expr  (34)
	expr : expr . EQ expr  (35)
	expr : expr . NEQ expr  (36)
	expr : expr . LT expr  (37)
	expr : expr . LTE expr  (38)
	expr : expr . GT expr  (39)
	expr : expr . GTE expr  (40)
	expr : expr . PLUS expr  (41)
	expr : expr . MINUS expr  (42)
	expr : expr MINUS expr .  (42)
	expr : expr . TIMES expr  (43)
	expr : expr . DIV expr  (44)
	expr : expr . MOD expr  (45)
